[package]
name = "kase"
version = "0.1.1"
edition = "2021"
description = "Convert from one case to another. Input case is determined on a best-guess basis, but can be overridden with the --from flag."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24"
